# General-Projects

Blog_Application/: README
Blog_Application/blog_site/: db.sqlite3
Blog_Application/project_root/: db.sqlite3
File Automation/: Automation.py  README.md
Lung Cancer Detection using Neural Network/: Bartlett_Kamaal_Final_Project.Rmd
Lung Cancer Detection using Neural Network/data/: .Rhistory
Lung Cancer Detection using Neural Network/docs/: Bartlett_Kamaal_Neural_Network_Analysis_Presentation.pptx  Lung Cancer Detection NN.docx  Paper Handout.docx
NBA_Pred/: .gitignore
NBA_Pred/features/: features.ipynb  model.ipynb
NBA_Pred/scraper/: historical_nba_stats.csv  historical_scraper.py  weekly_scraper.py
Passsword Gen/: Password_Generator.py
Pay Disparity Analysis/: Bartlett_Kamaal_Final Project.Rmd
Pay Disparity Analysis/docs/: Bartlett_Kamaal_Analysis of Pay Disparity Between Men and Women.docx  Bartlett_Kamaal_Analysis of Pay Disparity Between Men and Women.pptx
SLAM Analysis/: SLAM Settup.ipynb  SLAM_Analysis.ipynb
Twitch Automation/: README  README.md  twitch_chrome.py
bp_tracker/: .gitignore  README.md  db.sqlite3  manage.py  requirements.txt
file_organizer/: CMakeLists.txt  README.md  config.json  config_loader.cpp  config_loader.hpp  file_organizer.sln  file_organizer.vcxproj  file_organizer.vcxproj.filters  file_utils.cpp  file_utils.hpp  main.cpp  test_file_utils.cpp
file_organizer/file_organizer/x64/Debug/: vc143.idb
file_organizer/file_organizer/x64/Debug/file_organizer.tlog/: file_organizer.lastbuildstate
(+50 files in other folders)
